apps/external-name/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-name
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
