apps/external-name/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: router
subsets:
  - addresses:
      - ip: 10.69.0.1
    ports:
      - port: 80
