apps/external-name/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: external-name
  name: router-svc
spec:
  externalName: router.lan
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ExternalName
