apps/external-name/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: external-name
spec:
  parentRefs:
  - name: rajsingh-info
    namespace: gateway-system
  hostnames:
  - "router.rajsingh.info"  
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: router
      kind: Endpoint
      port: 80
